added controller, change business logic, fix bugs